# IP-Assistant

./: .dockerignore  .env  .env.example  .gitignore  CPCMatcher.py  DOCKER_SETUP.md  Dockerfile  Dockerfile.api  Ingestion-DOCUMENTATION.md  RAG Design.ipynb  README.md  docker-compose.yml  evaluation.py  ingestion.py  main.py  pyproject.toml  utils.py
app/: chat_ui.py  main.py
evals/: EVALUATION_README.md  EVALUATION_WORKFLOW.md  METRICS_CHEATSHEET.md  create_retrieval_dataset.py  evaluation.py  test_dataset_template.json
ip_assistant/: ingestion.py  retriever.py  utils.py
ip_assistant/api/: app.py
