[project]
name = "ip-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "openai>=2.1.0",
    "pandas>=2.3.3",
    "pymilvus>=2.6.2",
    "sentence-transformers==3.0.1",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
]
