[project]
name = "ip-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.68.0",
    "langchain>=0.3.27",
    "ollama>=0.6.0",
    "openai>=2.1.0",
    "pandas>=2.3.3",
    "pydantic>=1.8.0",
    "pymilvus>=2.6.2",
    "python-dotenv>=0.19.0",
    "python-multipart>=0.0.5",
    "sentence-transformers==3.0.1",
    "streamlit>=1.50.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.15.0",
    "orjson>=3.10.0",
]
